# dyna

./: .gitignore
dyna_py/: README.md  agent.py  agent_core.py  agent_loop.py  agents.py  app.py  baml_test.py  baml_test2.py  bamp3.py  combined.txt  combined_py.txt  consolidated_progress.md  core_arch_choice.md  design_v2.md  environment.py  extract_routes.py  flask_test.py  flask_unittest.py  goal_agent.py  joke_agent.py  lance_prompts.py  loopagentdeveloperguide.md  main.py  mcp_test.py  metadata_registry.py  metadata_registry_tests.py  persona_agent.py  progress.md  progress2.md  progress3.md  prompt-to-schema  prompt-to-schema.3  pyproject.toml  queue_imp.py  scratch.py  test_repl.md  write_dy_py.py  write_user_msg.py  ws_bus.py
dyna_py/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
dyna_py/baml_src/: clients.baml  generators.baml  jockular.baml  meta.baml  ragger.baml  tasks.baml
dyna_py/logic/: agents_logic.py  chat_logic.py  form_logic.py
dyna_py/public/plugins/: package-lock.json  package.json  pnpm-lock.yaml
dyna_py/public/plugins/plugins/: Hello.svelte
dyna_py/public/plugins/src/: App.svelte  Attributes.svelte  Canvas.svelte  (+9 more)
dyna_py/routes/: agent_configs_endpoints.py  agents_endpoints.py  api_map.py  chat_api.py  conversations_endpoints.py  form_api.py  not_impl.py  static_endpoints.py
dyna_py/store/: action_queue.py  agent_config.py  agent_state.py  agent_steps.py  conversations.py  memories.py  messages.py  schemas.py  sessions.py  state_async.py  steps_async.py
(+263 files in other folders)
